// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Toggle /> renders regular disabled active toggle correctly 1`] = `
.c0:focus .cIDyoQ {
  border-color: #026cdf;
  box-shadow: 0 0 5px 0 #026cdf;
}

<button
  aria-checked={true}
  className="toggle--disabled toggle--active toggle--large c0 gdFdum"
  disabled={true}
  onClick={[Function]}
  role="switch"
  size="large"
>
  <div
    className="bllgcF"
  >
    <div
      className="cIDyoQ"
    />
    <div
      className="kpbUJd"
    >
      <div
        className="cTZbZW"
      />
    </div>
  </div>
</button>
`;

exports[`<Toggle /> renders regular disabled inactive toggle correctly 1`] = `
.c0:focus .cIDyoQ {
  border-color: #026cdf;
  box-shadow: 0 0 5px 0 #026cdf;
}

<button
  aria-checked={false}
  className="toggle--disabled toggle--inactive toggle--large c0 gdFdum"
  disabled={true}
  onClick={[Function]}
  role="switch"
  size="large"
>
  <div
    className="bllgcF"
  >
    <div
      className="cIDyoQ"
    />
    <div
      className="kpbUJd"
    >
      <div
        className="cTZbZW"
      />
    </div>
  </div>
</button>
`;

exports[`<Toggle /> renders regular size active toggle correctly 1`] = `
.c0:focus .cIDyoQ {
  border-color: #026cdf;
  box-shadow: 0 0 5px 0 #026cdf;
}

<button
  aria-checked={true}
  className="toggle--enabled toggle--active toggle--large c0 gdFdum"
  disabled={false}
  onClick={[Function]}
  role="switch"
  size="large"
>
  <div
    className="bllgcF"
  >
    <div
      className="cIDyoQ"
    />
    <div
      className="kpbUJd"
    >
      <div
        className="cTZbZW"
      />
    </div>
  </div>
</button>
`;

exports[`<Toggle /> renders small size active toggle correctly 1`] = `
.c0:focus .cIDyoQ {
  border-color: #026cdf;
  box-shadow: 0 0 5px 0 #026cdf;
}

<button
  aria-checked={true}
  className="toggle--enabled toggle--active toggle--small c0 gdFdum"
  disabled={false}
  onClick={[Function]}
  role="switch"
  size="small"
>
  <div
    className="bllgcF"
  >
    <div
      className="cIDyoQ"
    />
    <div
      className="kpbUJd"
    >
      <div
        className="cTZbZW"
      />
    </div>
  </div>
</button>
`;
